# testpack

./: .gitignore  README.md  pyproject.toml
src/: engine_registry.py  run_tests.sh  trading_testplan.py
src/common/plugin/: __init__.py
src/core/: engine_factory.py  interfaces.py  test_executor.py
src/engines/: engine_a.py  simple_engine_driver.py
src/plugins/: data_reporter.py  metric_reporter.py
src/test_strategies/: latency_strategy.py  stress_strategy.py
src/test_types/: latency_test.py
src/tests/: conftest.py  test_performance.py
